--- a/index.html
+++ b/index.html
@@ -27,35 +27,39 @@
 
 
 
-    <div class="scoreboards">
+    <div class="game-area">
 
-        <div class="player-scoreboard">
-            <h1>Player</h1>
-            <p class="score">You score<span class="score"> 0 </span></p>
-            <p>Make your choice?</p>
-            <div class="choices">
-                <i id="rock" class="far fa-hand-rock choice"></i>
-                <i id="paper" class="far fa-hand-paper choice"></i>
-                <i id="scissors" class="far fa-hand-scissors choice"></i>
-                <i id="lizard" class="far fa-hand-lizard choice"></i>
-                <i id="spock" class="far fa-hand-spock choice"></i>
+        <div class="scoreboards">
+
+            <div class="player-scoreboard">
+                <h1>Player</h1>
+                <p class="score">You score<span class="score"> 0 </span></p>
+                <p>Make your choice?</p>
+                <div class="choices">
+                    <i id="rock" class="far fa-hand-rock choice"></i>
+                    <i id="paper" class="far fa-hand-paper choice"></i>
+                    <i id="scissors" class="far fa-hand-scissors choice"></i>
+                    <i id="lizard" class="far fa-hand-lizard choice"></i>
+                    <i id="spock" class="far fa-hand-spock choice"></i>
+                </div>
             </div>
-        </div>
 
-        <div class="computer-scoreboard">
-            <h1>Computer</h1>
-            <p class="score">Computer scores <span class="computer-score"> 0 </span></p>
-            <p>Computer chooses</p>
-            <div class="choices">
-                <i id="rock" class="far fa-hand-rock choice"></i>
-                <i id="paper" class="far fa-hand-paper choice"></i>
-                <i id="scissors" class="far fa-hand-scissors choice"></i>
-                <i id="lizard" class="far fa-hand-lizard choice"></i>
-                <i id="spock" class="far fa-hand-spock choice"></i>
+            <div class="computer-scoreboard">
+                <h1>Computer</h1>
+                <p class="score">Computer scores <span class="computer-score"> 0 </span></p>
+                <p>Computer chooses</p>
+                <div class="choices">
+                    <i id="rock" class="far fa-hand-rock choice"></i>
+                    <i id="paper" class="far fa-hand-paper choice"></i>
+                    <i id="scissors" class="far fa-hand-scissors choice"></i>
+                    <i id="lizard" class="far fa-hand-lizard choice"></i>
+                    <i id="spock" class="far fa-hand-spock choice"></i>
+                </div>
             </div>
-        </div>
 
-        <div class="results"></div>
-        <span id="round-text"></span>
+            <div class="results"></div>
+            <span id="round-text"></span>
+
+        </div>
 
     </div>
