--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <meta name="author" content="Bell">
 
     <!-- Font Awesome and Google Fonts -->
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Festive&display=swap" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Festive&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="assets/css/style.css">
     <title></title>
@@ -57,9 +57,16 @@
                 </div>
             </div>
 
-            <div class="results"></div>
-            <span id="round-text"></span>
+            <div class="results-area">
+                <p class="results">Who won results here Player or Computer<span id="round-text">0</span></p>
+                <p class="results">Who won results here Player or Computer<span id="round-text">0</span></p>
+            </div>
+            
 
         </div>
 
     </div>
+
+    <script src="assets/jss/script.js"></script>
+</body>
+</html>
