--- a/index.html
+++ b/index.html
@@ -19,74 +19,84 @@
 </head>
 
 <body>
+
     <div class="background" id="background" alt="christmas-trees"></div>
 
-    <h1 class="heading">
-        Rock-Paper-Scissors-Lizard-Spock Game
-    </h1>
+    <div class="foreground">
+
+        <h1 class="heading">
+            Rock-Paper-Scissors-Lizard-Spock Game
+        </h1>
 
 
 
-    <div class="game-area">
+        <div class="game-area">
 
-        <div class="scoreboards">
+            <div class="scoreboards">
 
-            <div class="player-scoreboard">
-                <h1>Player</h1>
-                <p class="score">You score<span class="score"> 0 </span></p>
-                <p>Make your choice?</p>
-                <div class="choices">
-                    <i id="rock" class="far fa-hand-rock choice"></i>
-                    <i id="paper" class="far fa-hand-paper choice"></i>
-                    <i id="scissors" class="far fa-hand-scissors choice"></i>
-                    <i id="lizard" class="far fa-hand-lizard choice"></i>
-                    <i id="spock" class="far fa-hand-spock choice"></i>
+                <div class="player-scoreboard">
+                    <h1>Player</h1>
+                    <p class="score">You score <span class="score"> 0 </span></p>
+                    <p>Make your choice?</p>
+                    <div class="choices">
+                        <i id="rock" class="far fa-hand-rock choice"></i>
+                        <i id="paper" class="far fa-hand-paper choice"></i>
+                        <i id="scissors" class="far fa-hand-scissors choice"></i>
+                        <i id="lizard" class="far fa-hand-lizard choice"></i>
+                        <i id="spock" class="far fa-hand-spock choice"></i>
+                    </div>
                 </div>
-            </div>
 
-            <div class="computer-scoreboard">
-                <h1>Computer</h1>
-                <p class="score">Computer scores <span class="computer-score"> 0 </span></p>
-                <p>Computer chooses</p>
-                <div class="choices">
-                    <i id="rock" class="far fa-hand-rock choice"></i>
-                    <i id="paper" class="far fa-hand-paper choice"></i>
-                    <i id="scissors" class="far fa-hand-scissors choice"></i>
-                    <i id="lizard" class="far fa-hand-lizard choice"></i>
-                    <i id="spock" class="far fa-hand-spock choice"></i>
+                <div class="computer-scoreboard">
+                    <h1>Computer</h1>
+                    <p class="score">Computer scores <span class="computer-score"> 0 </span></p>
+                    <p>Computer chooses</p>
+                    <div class="choices">
+                        <i id="rock" class="far fa-hand-rock choice"></i>
+                        <i id="paper" class="far fa-hand-paper choice"></i>
+                        <i id="scissors" class="far fa-hand-scissors choice"></i>
+                        <i id="lizard" class="far fa-hand-lizard choice"></i>
+                        <i id="spock" class="far fa-hand-spock choice"></i>
+                    </div>
                 </div>
-            </div>
 
+            </div>
+        </div>
+
+
+        <div class="win" style="display-block;">
+            <p>Winning Combinations are;
+                <br>
+                <i id="rock" class="far fa-hand-rock"> Crushes </i> <i id="scissors"
+                    class="far fa-hand-scissors choice"></i> & <i id="lizard" class="far fa-hand-lizard choice"></i>
+                <br>
+                <i id="paper" class="far fa-hand-paper choice"></i> Covers <i id="rock"
+                    class="far fa-hand-rock choice"></i> & Disproves <i id="spock" class="far fa-hand-spock choice"></i>
+                <br>
+                <i id="scissors" class="far fa-hand-scissors choice"></i> Cuts <i id="paper"
+                    class="far fa-hand-paper choice"></i> & Decapitates a <i id="lizard"
+                    class="far fa-hand-lizard choice"></i>
+                <br>
+                <i id="lizard" class="far fa-hand-lizard choice"></i> Poisons <i id="spock"
+                    class="far fa-hand-spock choice"></i> & Eats <i id="paper" class="far fa-hand-paper choice"></i>
+                <br>
+                <i id="spock" class="far fa-hand-spock choice"></i> Smashes <i id="scissors"
+                    class="far fa-hand-scissors choice"></i> & Vapourises <i id="rock"
+                    class="far fa-hand-rock choice"></i>
+                <br>
+            </p>
+        </div>
+
+        <div class="how-to-play">
+            <h2>How to Play</h2>
+            <p>Choose a shape of hand that you want to play against the Computer. Click on the image to start the game.
+                Remember choose wisely it is best of 7 go's for you to beat the Computer. </p>
+        </div>
+
+        <div class="rules">
+            <button class="rules-button">Rules</button>
         </div>
     </div>
-
-
-    <div class="win" style="display-block;">
-        <p>Winning Combinations are;
-            <br>
-            <i id="rock"class="far fa-hand-rock"> Crushes </i> <i id="scissors" class="far fa-hand-scissors choice"></i> & <i id="lizard" class="far fa-hand-lizard choice"></i>
-            <br>
-            <i id="paper" class="far fa-hand-paper choice"></i> Covers <i id="rock" class="far fa-hand-rock choice"></i> & Disproves <i id="spock" class="far fa-hand-spock choice"></i>
-            <br>
-            <i id="scissors" class="far fa-hand-scissors choice"></i> Cuts <i id="paper" class="far fa-hand-paper choice"></i> & Decapitates a <i id="lizard" class="far fa-hand-lizard choice"></i>
-            <br>
-            <i id="lizard" class="far fa-hand-lizard choice"></i> Poisons <i id="spock" class="far fa-hand-spock choice"></i> & Eats <i id="paper" class="far fa-hand-paper choice"></i>
-            <br>
-            <i id="spock" class="far fa-hand-spock choice"></i> Smashes <i id="scissors" class="far fa-hand-scissors choice"></i> & Vapourises <i id="rock" class="far fa-hand-rock choice"></i>
-            <br>
-        </p>
-    </div>
-
-    <div class="how-to-play">
-        <h2>How to Play</h2>
-        <p>Choose a shape of hand that you want to play against the Computer. Click on the image to start the game.
-            Remember choose wisely it is best of 7 go's for you to beat the Computer. </p>
-    </div>
-    
-    <div class="rules">
-        <button class="rules-button">Rules</button>
-    </div>
-   
 
     <!-- Font Awesome script -->
     <script src="https://kit.fontawesome.com/6f8f3d395c.js" crossorigin="anonymous"></script>
