--- a/index.html
+++ b/index.html
@@ -28,37 +28,62 @@
             Rock-Paper-Scissors-Lizard-Spock Game
         </h1>
 
+        <div class="start-btn">
+        <button id="start" class="btn">Play</button>
+        </div>
 
 
-        <div class="game-area">
+        <div id="game-screen" style="display: block;">
+            <div class="game-area">
 
-            <div class="scoreboards">
+                <div class="round-results">
+                    <span id="round-text">Computer Wins the Round!</span>
+                </div>
 
-                <div class="player-scoreboard">
-                    <h1>Player</h1>
-                    <p class="score">You score <span class="score"> 0 </span></p>
-                    <p>Make your choice?</p>
-                    <div class="choices">
-                        <i id="rock" class="far fa-hand-rock choice"></i>
-                        <i id="paper" class="far fa-hand-paper choice"></i>
-                        <i id="scissors" class="far fa-hand-scissors choice"></i>
-                        <i id="lizard" class="far fa-hand-lizard choice"></i>
-                        <i id="spock" class="far fa-hand-spock choice"></i>
+
+                <div class="scoreboards">
+
+                    <div class="player-scoreboard">
+                        <h1>Player</h1>
+                        <p class="score">You score <span class="score"> 0 </span></p>
+                        <p>Make your choice?</p>
+                        <div class="choices">
+                            <i id="rock" class="far fa-hand-rock choice"></i>
+                            <i id="paper" class="far fa-hand-paper choice"></i>
+                            <i id="scissors" class="far fa-hand-scissors choice"></i>
+                            <i id="lizard" class="far fa-hand-lizard choice"></i>
+                            <i id="spock" class="far fa-hand-spock choice"></i>
+                        </div>
+                    </div>
+
+                    <div class="computer-scoreboard">
+                        <h1>Computer</h1>
+                        <p class="score">Computer scores <span class="comp-score"> 0 </span></p>
+                        <p>Computer chooses</p>
+                        <i id="computer-icon" class="far fa-hand-spock"></i>
+                        <!-- <div class="choices">
+                            <i id="rock" class="far fa-hand-rock choice"></i>
+                            <i id="paper" class="far fa-hand-paper choice"></i>
+                            <i id="scissors" class="far fa-hand-scissors choice"></i>
+                            <i id="lizard" class="far fa-hand-lizard choice"></i>
+                            <i id="spock" class="far fa-hand-spock choice"></i>
+                        </div> -->
+                    </div>
+
+                </div>
+
+
+                <!-- track -->
+
+                <div class="winner-modal">
+                    <div class="modal-content">
+                        <span class="close"></span>
+                        <h3 class="modal-header"></h3>
+                        <p class="modal-result"></p>
                     </div>
                 </div>
 
-                <div class="computer-scoreboard">
-                    <h1>Computer</h1>
-                    <p class="score">Computer scores <span class="computer-score"> 0 </span></p>
-                    <p>Computer chooses</p>
-                    <div class="choices">
-                        <i id="rock" class="far fa-hand-rock choice"></i>
-                        <i id="paper" class="far fa-hand-paper choice"></i>
-                        <i id="scissors" class="far fa-hand-scissors choice"></i>
-                        <i id="lizard" class="far fa-hand-lizard choice"></i>
-                        <i id="spock" class="far fa-hand-spock choice"></i>
-                    </div>
-                </div>
+
 
             </div>
         </div>
@@ -68,21 +93,22 @@
             <p>Winning Combinations are;
                 <br>
                 <i id="rock" class="far fa-hand-rock"> Crushes </i> <i id="scissors"
-                    class="far fa-hand-scissors choice"></i> & <i id="lizard" class="far fa-hand-lizard choice"></i>
+                    class="far fa-hand-scissors"></i> & <i id="lizard" class="far fa-hand-lizard"></i>
                 <br>
-                <i id="paper" class="far fa-hand-paper choice"></i> Covers <i id="rock"
-                    class="far fa-hand-rock choice"></i> & Disproves <i id="spock" class="far fa-hand-spock choice"></i>
+                <i id="paper" class="far fa-hand-paper"></i> Covers <i id="rock"
+                    class="far fa-hand-rock"></i>
+                & Disproves <i id="spock" class="far fa-hand-spock"></i>
                 <br>
-                <i id="scissors" class="far fa-hand-scissors choice"></i> Cuts <i id="paper"
-                    class="far fa-hand-paper choice"></i> & Decapitates a <i id="lizard"
-                    class="far fa-hand-lizard choice"></i>
+                <i id="scissors" class="far fa-hand-scissors"></i> Cuts <i id="paper"
+                    class="far fa-hand-paper"></i> & Decapitates a <i id="lizard"
+                    class="far fa-hand-lizard"></i>
                 <br>
-                <i id="lizard" class="far fa-hand-lizard choice"></i> Poisons <i id="spock"
-                    class="far fa-hand-spock choice"></i> & Eats <i id="paper" class="far fa-hand-paper choice"></i>
+                <i id="lizard" class="far fa-hand-lizard"></i> Poisons <i id="spock"
+                    class="far fa-hand-spock"></i> & Eats <i id="paper" class="far fa-hand-paper"></i>
                 <br>
-                <i id="spock" class="far fa-hand-spock choice"></i> Smashes <i id="scissors"
-                    class="far fa-hand-scissors choice"></i> & Vapourises <i id="rock"
-                    class="far fa-hand-rock choice"></i>
+                <i id="spock" class="far fa-hand-spock"></i> Smashes <i id="scissors"
+                    class="far fa-hand-scissors"></i> & Vapourises <i id="rock"
+                    class="far fa-hand-rock"></i>
                 <br>
             </p>
         </div>
@@ -90,11 +116,11 @@
         <div class="how-to-play">
             <h2>How to Play</h2>
             <p>Choose a shape of hand that you want to play against the Computer. Click on the image to start the game.
-                Remember choose wisely it is best of 7 go's for you to beat the Computer. </p>
+                Remember choose wisely it is best of 10 go's for you to beat the Computer. </p>
         </div>
 
         <div class="rules">
-            <button class="rules-button">Rules</button>
+            <button class="rules-button" id="rules">Rules</button>
         </div>
     </div>
 
