--- a/index.html
+++ b/index.html
@@ -25,27 +25,25 @@
     <div class="foreground">
 
         <h1 class="heading">
-            Rock-Paper-Scissors-Lizard-Spock Game
+            Xmas Rock-Paper-Scissors-Lizard-Spock Game
         </h1>
 
         <div class="start-btn">
-        <button id="start" class="btn">Play</button>
+        <button id="start" class="btn">Make this reset button work</button>
         </div>
 
 
         <div id="game-screen" style="display: block;">
             <div class="game-area">
 
-                <div class="round-results">
-                    <span id="round-text">Computer Wins the Round!</span>
-                </div>
+                
 
 
                 <div class="scoreboards">
 
                     <div class="player-scoreboard">
-                        <h1>Player</h1>
-                        <p class="score">You score <span class="score"> 0 </span></p>
+                        <h1>Player's Score is:</h1>
+                        <p class="score"><span class="score"> 0 </span></p>
                         <p>Make your choice?</p>
                         <div class="choices">
                             <i id="rock" class="far fa-hand-rock choice"></i>
@@ -57,17 +55,10 @@
                     </div>
 
                     <div class="computer-scoreboard">
-                        <h1>Computer</h1>
-                        <p class="score">Computer scores <span class="comp-score"> 0 </span></p>
+                        <h1>Computer's Score is:</h1>
+                        <p class="score"><span class="comp-score"> 0 </span></p>
                         <p>Computer chooses</p>
                         <i id="computer-icon" class="far fa-hand-spock"></i>
-                        <!-- <div class="choices">
-                            <i id="rock" class="far fa-hand-rock choice"></i>
-                            <i id="paper" class="far fa-hand-paper choice"></i>
-                            <i id="scissors" class="far fa-hand-scissors choice"></i>
-                            <i id="lizard" class="far fa-hand-lizard choice"></i>
-                            <i id="spock" class="far fa-hand-spock choice"></i>
-                        </div> -->
                     </div>
 
                 </div>
@@ -75,7 +66,7 @@
 
                 <!-- track -->
 
-                <div class="winner-modal">
+                <div class="winner-modal" style=>
                     <div class="modal-content">
                         <span class="close"></span>
                         <h3 class="modal-header"></h3>
@@ -90,6 +81,9 @@
 
 
         <div class="win" style="display-block;">
+            <div class="round-results">
+                <span id="round-text">Computer Wins the Round!</span>
+            </div>
             <p>Winning Combinations are;
                 <br>
                 <i id="rock" class="far fa-hand-rock"> Crushes </i> <i id="scissors"
@@ -115,8 +109,8 @@
 
         <div class="how-to-play">
             <h2>How to Play</h2>
-            <p>Choose a shape of hand that you want to play against the Computer. Click on the image to start the game.
-                Remember choose wisely it is best of 10 go's for you to beat the Computer. </p>
+            <p>Choose the shape of hand that you want to play against the Computer. Click on the image to start the game.
+                Remember choose wisely it is best of 9 go's for you to beat the Computer. </p>
         </div>
 
         <div class="rules">
