--- a/index.html
+++ b/index.html
@@ -29,14 +29,12 @@
         </h1>
 
         <div class="start-btn">
-        <button id="start" class="btn">Make this reset button work</button>
+            <button id="start" class="btn">Make this reset button work</button>
         </div>
 
 
         <div id="game-screen" style="display: block;">
             <div class="game-area">
-
-                
 
 
                 <div class="scoreboards">
@@ -64,7 +62,7 @@
                 </div>
 
 
-                <!-- track -->
+                <!--track -->
 
                 <div class="winner-modal" style=>
                     <div class="modal-content">
@@ -86,43 +84,43 @@
             </div>
             <p>Winning Combinations are;
                 <br>
-                <i id="rock" class="far fa-hand-rock"> Crushes </i> <i id="scissors"
-                    class="far fa-hand-scissors"></i> & <i id="lizard" class="far fa-hand-lizard"></i>
+                <i id="rock" class="far fa-hand-rock"> Crushes </i> <i id="scissors" class="far fa-hand-scissors"></i> &
+                <i id="lizard" class="far fa-hand-lizard"></i>
                 <br>
-                <i id="paper" class="far fa-hand-paper"></i> Covers <i id="rock"
-                    class="far fa-hand-rock"></i>
+                <i id="paper" class="far fa-hand-paper"></i> Covers <i id="rock" class="far fa-hand-rock"></i>
                 & Disproves <i id="spock" class="far fa-hand-spock"></i>
                 <br>
-                <i id="scissors" class="far fa-hand-scissors"></i> Cuts <i id="paper"
-                    class="far fa-hand-paper"></i> & Decapitates a <i id="lizard"
-                    class="far fa-hand-lizard"></i>
+                <i id="scissors" class="far fa-hand-scissors"></i> Cuts <i id="paper" class="far fa-hand-paper"></i> &
+                Decapitates a <i id="lizard" class="far fa-hand-lizard"></i>
                 <br>
-                <i id="lizard" class="far fa-hand-lizard"></i> Poisons <i id="spock"
-                    class="far fa-hand-spock"></i> & Eats <i id="paper" class="far fa-hand-paper"></i>
+                <i id="lizard" class="far fa-hand-lizard"></i> Poisons <i id="spock" class="far fa-hand-spock"></i> &
+                Eats <i id="paper" class="far fa-hand-paper"></i>
                 <br>
-                <i id="spock" class="far fa-hand-spock"></i> Smashes <i id="scissors"
-                    class="far fa-hand-scissors"></i> & Vapourises <i id="rock"
-                    class="far fa-hand-rock"></i>
+                <i id="spock" class="far fa-hand-spock"></i> Smashes <i id="scissors" class="far fa-hand-scissors"></i>
+                & Vapourises <i id="rock" class="far fa-hand-rock"></i>
                 <br>
             </p>
         </div>
 
         <div class="how-to-play">
             <h2>How to Play</h2>
-            <p>Choose the shape of hand that you want to play against the Computer. Click on the image to start the game.
+            <p>Choose the shape of hand that you want to play against the Computer. Click on the image to start the
+                game.
                 Remember choose wisely it is best of 9 go's for you to beat the Computer. </p>
         </div>
 
         <div class="rules">
-            <button class="rules-button" id="rules">Rules</button>
+            <button class="rules-button" id="rules-button">Rules</button>
         </div>
     </div>
 
-    <!-- Font Awesome script -->
-    <script src="https://kit.fontawesome.com/6f8f3d395c.js" crossorigin="anonymous"></script>
+    <FontAwesome script -->
+        <script src="https://kit.fontawesome.com/6f8f3d395c.js" crossorigin="anonymous"></script>
 
 
-    <script src="assets/jss/script.js"></script>
+        <script src="assets/jss/script.js"></script>
 </body>
 
 </html>
+
+</body>
