--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
                 <div class="winner-modal" style=>
                     <div class="modal-content">
-                        <span class="close"></span>
+                        <span class="close"><i class="fas fa-times-circle"></i></span>
                         <h3 class="modal-header"></h3>
                         <p class="modal-result"></p>
                     </div>
@@ -102,12 +102,26 @@
             </p>
         </div>
 
-        <div class="how-to-play">
+
+
+        <div class="rules-modal" style=>
+            <div class="rules-content">
+                <span class="open"><i class="fas fa-times-circle"></i></span>
+                <!-- <h3 class="modal-header"></h3>
+                <p class="modal-result"></p> -->
+                <h2>How to Play</h2>
+                <p>Choose the shape of hand that you want to play against the Computer. Click on the image to start the
+                    game.
+                    Remember choose wisely it is best of 9 go's for you to beat the Computer. </p>
+            </div>
+        </div>
+
+        <!-- <div class="how-to-play">
             <h2>How to Play</h2>
             <p>Choose the shape of hand that you want to play against the Computer. Click on the image to start the
                 game.
                 Remember choose wisely it is best of 9 go's for you to beat the Computer. </p>
-        </div>
+        </div> -->
 
         <div class="rules">
             <button class="rules-button" id="rules-button">Rules</button>
