--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <div class="computer-scoreboard">
                         <h1>Computer's Score is:</h1>
                         <p class="score"><span class="comp-score"> 0 </span></p>
-                        <p>Computer chooses ....</p>
+                        <p>Computer chooses ...</p>
                         <i id="computer-icon" class="far fa-hand-spock"></i>
                     </div>
 
@@ -104,25 +104,17 @@
 
 
 
-        <div class="rules-modal" style="display: block;">
+        <div class="rules-modal" style=>
             <div class="rules-content">
                 <span class="open"><i class="fas fa-times-circle"></i></span>
                 <!-- <h3 class="modal-header"></h3>
                 <p class="modal-result"></p> -->
                 <h2>How to Play</h2>
-                <p>Choose the shape of hand that you want to play against the Computer. Click on that hand to start the
+                <p>Choose the shape of hand that you want to play against the Computer. Click on the image to start the
                     game.
                     Remember choose wisely it is best of 9 go's for you to beat the Computer. </p>
             </div>
         </div>
-
-
-        <!-- <div class="winner-modal" style=>
-            <div class="modal-content">
-                <span class="close"><i class="fas fa-times-circle"></i></span>
-                <h3 class="modal-header"></h3>
-                <p class="modal-result"></p>
-            </div> -->
 
         <!-- <div class="how-to-play">
             <h2>How to Play</h2>
