Add java rules button

--- a/index.html
+++ b/index.html
@@ -102,37 +102,25 @@
             </p>
         </div>
 
+        <button id="myBtn">Rules Button</button>
 
-
-        <div class="rules-modal" style=>
-            <div class="rules-content">
-                <span class="open"><i class="fas fa-times-circle"></i></span>
-                <!-- <h3 class="modal-header"></h3>
-                <p class="modal-result"></p> -->
-                <h2>How to Play</h2>
-                <p>Choose the shape of hand that you want to play against the Computer. Click on the image to start the
+        <!-- The Modal -->
+        <div id="myModal" class="modal">
+            <div class="modal-content">
+                <span class="close"></span>
+                <h1>How to Play the Game</h1>
+                <p>Choose the shape of hand that you want to play against the Computer. Click on the hand image you want
+                    to choose to start the
                     game.
-                    Remember choose wisely it is best of 9 go's for you to beat the Computer. </p>
+                    Remember choose wisely it is best of 9 go's for you to beat the Computer.</p>
             </div>
         </div>
 
-        <!-- <div class="how-to-play">
-            <h2>How to Play</h2>
-            <p>Choose the shape of hand that you want to play against the Computer. Click on the image to start the
-                game.
-                Remember choose wisely it is best of 9 go's for you to beat the Computer. </p>
-        </div> -->
-
-        <div class="rules">
-            <button class="rules-button" id="rules-button">Rules</button>
-        </div>
-    </div>
-
-    <FontAwesome script -->
-        <script src="https://kit.fontawesome.com/6f8f3d395c.js" crossorigin="anonymous"></script>
+        <FontAwesome script -->
+            <script src="https://kit.fontawesome.com/6f8f3d395c.js" crossorigin="anonymous"></script>
 
 
-        <script src="assets/jss/script.js"></script>
+            <script src="assets/jss/script.js"></script>
 </body>
 
 </html>
