Add style button

--- a/index.html
+++ b/index.html
@@ -109,10 +109,9 @@
             <div class="modal-content">
                 <span class="close"></span>
                 <h1>How to Play the Game</h1>
-                <p>Choose the shape of hand that you want to play against the Computer. Click on the hand image you want
-                    to choose to start the
-                    game.
-                    Remember choose wisely it is best of 9 go's for you to beat the Computer.</p>
+                <p>Choose the shape of hand that you want to play against the Computer. Click on the image you want
+                    to to start the game.
+                    Remember choose wisely it is best of 3 go's for you to beat the Computer.</p>
             </div>
         </div>
 
