--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
         </h1>
 
         <div class="start-btn">
-            <button id="start" class="btn">Make this reset button work</button>
+            <button class="btn" id="myBtn">Rules of Play</button>
+            <!-- <button id="start" class="btn">Make this reset button work</button> -->
         </div>
 
 
@@ -102,7 +103,7 @@
             </p>
         </div>
 
-        <button id="myBtn">Rules Button</button>
+        <!-- <button class="btn" id="myBtn">Rules of Play</button> -->
 
         <!-- The Modal -->
         <div id="myModal" class="modal">
