--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
 
 <body>
 
+    <!-- https://pixabay.com/music/search/genre/christmas/ -->
+
+
+
+    <div class="music-btn">
+        <button class="btn" id="audio">Play Music</button>
+        <i class="fas fa-holly-berry" id="audio" >Play Music</i>
+        <!-- <button id="start" class="btn">Make this reset button work</button> -->
+    </div>
+
+
     <div class="background" id="background" alt="christmas-trees"></div>
 
     <div class="foreground">
