--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 
 
 
-    <div class="music-btn">
+    <!-- <div class="music-btn">
         <button class="btn" id="audio">Play Music</button>
         <i class="fas fa-holly-berry" id="audio" >Play Music</i>
+    </div> -->
         <!-- <button id="start" class="btn">Make this reset button work</button> -->
-    </div>
 
 
     <div class="background" id="background" alt="christmas-trees"></div>
