--- a/index.html
+++ b/index.html
@@ -28,112 +28,128 @@
         <button class="btn" id="audio">Play Music</button>
         <i class="fas fa-holly-berry" id="audio" >Play Music</i>
     </div> -->
-        <!-- <button id="start" class="btn">Make this reset button work</button> -->
+    <!-- <button id="start" class="btn">Make this reset button work</button> -->
+
+    <!-- <i id="audio" class="fas fa-holly-berry" style="color:darkgreen;">
+        <source src="assets/music/christmas-magic-night-11648.mp3" type="audio/mpeg"></i> -->
 
 
-    <div class="background" id="background" alt="christmas-trees"></div>
+        <audio controls>
+            <source src="assets/music/christmas-magic-night-11648.mp3" type="audio/mpeg">
+        </audio>
 
-    <div class="foreground">
-
-        <h1 class="heading">
-            Xmas Rock-Paper-Scissors-Lizard-Spock Game
-        </h1>
-
-        <div class="start-btn">
-            <button class="btn" id="myBtn">Rules of Play</button>
-            <!-- <button id="start" class="btn">Make this reset button work</button> -->
-        </div>
+        <i id="audio" class="fas fa-holly-berry" style="color:darkgreen;"></i>
+                
+        <!-- <button onclick='play'>Play Xmas</button> -->
+     
+ 
 
 
-        <div id="game-screen" style="display: block;">
-            <div class="game-area">
+        <div class="background" id="background" alt="christmas-trees"></div>
+
+        <div class="foreground">
+
+            <h1 class="heading">
+                Xmas Rock-Paper-Scissors-Lizard-Spock Game
+            </h1>
+
+            <div class="start-btn">
+                <button class="btn" id="myBtn">Rules of Play</button>
+                <!-- <button id="start" class="btn">Make this reset button work</button> -->
+            </div>
 
 
-                <div class="scoreboards">
+            <div id="game-screen" style="display: block;">
+                <div class="game-area">
 
-                    <div class="player-scoreboard">
-                        <h1>Player's Score is:</h1>
-                        <p class="score"><span class="score"> 0 </span></p>
-                        <p>Make your choice?</p>
-                        <div class="choices">
-                            <i id="rock" class="far fa-hand-rock choice"></i>
-                            <i id="paper" class="far fa-hand-paper choice"></i>
-                            <i id="scissors" class="far fa-hand-scissors choice"></i>
-                            <i id="lizard" class="far fa-hand-lizard choice"></i>
-                            <i id="spock" class="far fa-hand-spock choice"></i>
+
+                    <div class="scoreboards">
+
+                        <div class="player-scoreboard">
+                            <h1>Player's Score is:</h1>
+                            <p class="score"><span class="score"> 0 </span></p>
+                            <p>Make your choice?</p>
+                            <div class="choices">
+                                <i id="rock" class="far fa-hand-rock choice"></i>
+                                <i id="paper" class="far fa-hand-paper choice"></i>
+                                <i id="scissors" class="far fa-hand-scissors choice"></i>
+                                <i id="lizard" class="far fa-hand-lizard choice"></i>
+                                <i id="spock" class="far fa-hand-spock choice"></i>
+                            </div>
+                        </div>
+
+                        <div class="computer-scoreboard">
+                            <h1>Computer's Score is:</h1>
+                            <p class="score"><span class="comp-score"> 0 </span></p>
+                            <p>Computer chooses ...</p>
+                            <i id="computer-icon" class="far fa-hand-spock"></i>
+                        </div>
+
+                    </div>
+
+
+                    <!--track -->
+
+                    <div class="winner-modal" style=>
+                        <div class="modal-content">
+                            <span class="close"><i class="fas fa-times-circle"></i></span>
+                            <h3 class="modal-header"></h3>
+                            <p class="modal-result"></p>
                         </div>
                     </div>
 
-                    <div class="computer-scoreboard">
-                        <h1>Computer's Score is:</h1>
-                        <p class="score"><span class="comp-score"> 0 </span></p>
-                        <p>Computer chooses ...</p>
-                        <i id="computer-icon" class="far fa-hand-spock"></i>
-                    </div>
+
 
                 </div>
+            </div>
 
 
-                <!--track -->
-
-                <div class="winner-modal" style=>
-                    <div class="modal-content">
-                        <span class="close"><i class="fas fa-times-circle"></i></span>
-                        <h3 class="modal-header"></h3>
-                        <p class="modal-result"></p>
-                    </div>
+            <div class="win" style="display-block">
+                <div class="round-results">
+                    <span id="round-text">Computer Wins the Round!</span>
                 </div>
-
-
-
+                <p>Winning Combinations are;
+                    <br>
+                    <i id="rock" class="far fa-hand-rock"> Crushes </i> <i id="scissors"
+                        class="far fa-hand-scissors"></i> &
+                    <i id="lizard" class="far fa-hand-lizard"></i>
+                    <br>
+                    <i id="paper" class="far fa-hand-paper"></i> Covers <i id="rock" class="far fa-hand-rock"></i>
+                    & Disproves <i id="spock" class="far fa-hand-spock"></i>
+                    <br>
+                    <i id="scissors" class="far fa-hand-scissors"></i> Cuts <i id="paper" class="far fa-hand-paper"></i>
+                    &
+                    Decapitates a <i id="lizard" class="far fa-hand-lizard"></i>
+                    <br>
+                    <i id="lizard" class="far fa-hand-lizard"></i> Poisons <i id="spock" class="far fa-hand-spock"></i>
+                    &
+                    Eats <i id="paper" class="far fa-hand-paper"></i>
+                    <br>
+                    <i id="spock" class="far fa-hand-spock"></i> Smashes <i id="scissors"
+                        class="far fa-hand-scissors"></i>
+                    & Vapourises <i id="rock" class="far fa-hand-rock"></i>
+                    <br>
+                </p>
             </div>
-        </div>
 
+            <!-- <button class="btn" id="myBtn">Rules of Play</button> -->
 
-        <div class="win" style="display-block;">
-            <div class="round-results">
-                <span id="round-text">Computer Wins the Round!</span>
+            <!-- The Modal -->
+            <div id="myModal" class="modal">
+                <div class="modal-content">
+                    <span class="close"></span>
+                    <h1>How to Play the Game</h1>
+                    <p>Choose the shape of hand that you want to play against the Computer. Click on the image you want
+                        to to start the game.
+                        Remember choose wisely it is best of 3 go's for you to beat the Computer.</p>
+                </div>
             </div>
-            <p>Winning Combinations are;
-                <br>
-                <i id="rock" class="far fa-hand-rock"> Crushes </i> <i id="scissors" class="far fa-hand-scissors"></i> &
-                <i id="lizard" class="far fa-hand-lizard"></i>
-                <br>
-                <i id="paper" class="far fa-hand-paper"></i> Covers <i id="rock" class="far fa-hand-rock"></i>
-                & Disproves <i id="spock" class="far fa-hand-spock"></i>
-                <br>
-                <i id="scissors" class="far fa-hand-scissors"></i> Cuts <i id="paper" class="far fa-hand-paper"></i> &
-                Decapitates a <i id="lizard" class="far fa-hand-lizard"></i>
-                <br>
-                <i id="lizard" class="far fa-hand-lizard"></i> Poisons <i id="spock" class="far fa-hand-spock"></i> &
-                Eats <i id="paper" class="far fa-hand-paper"></i>
-                <br>
-                <i id="spock" class="far fa-hand-spock"></i> Smashes <i id="scissors" class="far fa-hand-scissors"></i>
-                & Vapourises <i id="rock" class="far fa-hand-rock"></i>
-                <br>
-            </p>
-        </div>
 
-        <!-- <button class="btn" id="myBtn">Rules of Play</button> -->
-
-        <!-- The Modal -->
-        <div id="myModal" class="modal">
-            <div class="modal-content">
-                <span class="close"></span>
-                <h1>How to Play the Game</h1>
-                <p>Choose the shape of hand that you want to play against the Computer. Click on the image you want
-                    to to start the game.
-                    Remember choose wisely it is best of 3 go's for you to beat the Computer.</p>
-            </div>
-        </div>
-
-        <FontAwesome script -->
-            <script src="https://kit.fontawesome.com/6f8f3d395c.js" crossorigin="anonymous"></script>
+            <FontAwesome script -->
+                <script src="https://kit.fontawesome.com/6f8f3d395c.js" crossorigin="anonymous"></script>
 
 
-            <script src="assets/jss/script.js"></script>
+                <script src="assets/jss/script.js"></script>
 </body>
 
 </html>
-
-</body>
