--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
         <div class="win" style="display-block">
             <div class="round-results">
-                <span id="round-text">Computer Wins the Round!</span>
+                <span id="round-answer">Computer Wins the Round!</span>
             </div>
             <p>Winning Combinations are;
                 <br>
@@ -163,9 +163,7 @@
                     Remember choose wisely it is best of 3 go's for you to beat the Computer.</p>
             </div>
         </div>
-
-        <script src="snow.js"></script>
-        
+     
         <FontAwesome script -->
             <script src="https://kit.fontawesome.com/6f8f3d395c.js" crossorigin="anonymous"></script>
 
