Add html testing bugs

--- a/index.html
+++ b/index.html
@@ -117,11 +117,14 @@
             </div>
         </div>
 
-        <FontAwesome script -->
+        <FontAwesome>
             <script src="https://kit.fontawesome.com/6f8f3d395c.js" crossorigin="anonymous"></script>
 
 
             <script src="assets/jss/script.js"></script>
+
+    </div>
+
 </body>
 
 </html>
@@ -140,7 +143,7 @@
         <source src="assets/music/christmas-magic-night-11648.mp3" type="audio/mpeg"></i> -->
 
 
-        <audio controls loop>
+        <audio controls>
             <source src="assets/music/christmas-magic-night-11648.mp3" type="audio/mpeg">
         </audio>
     
