Add html testing bugs

--- a/index.html
+++ b/index.html
@@ -87,21 +87,21 @@
             </div>
             <p>Winning Combinations are;
                 <br>
-                <i id="rock" class="far fa-hand-rock"> Crushes </i> <i id="scissors" class="far fa-hand-scissors"></i> &
-                <i id="lizard" class="far fa-hand-lizard"></i>
+                <i class="far fa-hand-rock"> Crushes </i> <i id="scissors" class="far fa-hand-scissors"></i> &
+                <i class="far fa-hand-lizard"></i>
                 <br>
-                <i id="paper" class="far fa-hand-paper"></i> Covers <i id="rock" class="far fa-hand-rock"></i>
+                <i class="far fa-hand-paper"></i> Covers <i id="rock" class="far fa-hand-rock"></i>
                 & Disproves <i id="spock" class="far fa-hand-spock"></i>
                 <br>
-                <i id="scissors" class="far fa-hand-scissors"></i> Cuts <i id="paper" class="far fa-hand-paper"></i>
+                <i class="far fa-hand-scissors"></i> Cuts <i id="paper" class="far fa-hand-paper"></i>
                 &
                 Decapitates a <i id="lizard" class="far fa-hand-lizard"></i>
                 <br>
-                <i id="lizard" class="far fa-hand-lizard"></i> Poisons <i id="spock" class="far fa-hand-spock"></i>
+                <i class="far fa-hand-lizard"></i> Poisons <i id="spock" class="far fa-hand-spock"></i>
                 &
-                Eats <i id="paper" class="far fa-hand-paper"></i>
+                Eats <i class="far fa-hand-paper"></i>
                 <br>
-                <i id="spock" class="far fa-hand-spock"></i> Smashes <i id="scissors" class="far fa-hand-scissors"></i>
+                <i class="far fa-hand-spock"></i> Smashes <i id="scissors" class="far fa-hand-scissors"></i>
                 & Vapourises <i id="rock" class="far fa-hand-rock"></i>
                 <br>
             </p>
@@ -124,7 +124,7 @@
             <script src="assets/jss/script.js"></script>
 
     </div>
-
+    
 </body>
 
 </html>
