Add html testing bugs

--- a/index.html
+++ b/index.html
@@ -87,22 +87,22 @@
             </div>
             <p>Winning Combinations are;
                 <br>
-                <i class="far fa-hand-rock"> Crushes </i> <i id="scissors" class="far fa-hand-scissors"></i> &
+                <i class="far fa-hand-rock"> Crushes </i> <i class="far fa-hand-scissors"></i> &
                 <i class="far fa-hand-lizard"></i>
                 <br>
-                <i class="far fa-hand-paper"></i> Covers <i id="rock" class="far fa-hand-rock"></i>
-                & Disproves <i id="spock" class="far fa-hand-spock"></i>
+                <i class="far fa-hand-paper"></i> Covers <i class="far fa-hand-rock"></i>
+                & Disproves <i class="far fa-hand-spock"></i>
                 <br>
-                <i class="far fa-hand-scissors"></i> Cuts <i id="paper" class="far fa-hand-paper"></i>
+                <i class="far fa-hand-scissors"></i> Cuts <i class="far fa-hand-paper"></i>
                 &
-                Decapitates a <i id="lizard" class="far fa-hand-lizard"></i>
+                Decapitates a <i class="far fa-hand-lizard"></i>
                 <br>
-                <i class="far fa-hand-lizard"></i> Poisons <i id="spock" class="far fa-hand-spock"></i>
+                <i class="far fa-hand-lizard"></i> Poisons <i class="far fa-hand-spock"></i>
                 &
                 Eats <i class="far fa-hand-paper"></i>
                 <br>
-                <i class="far fa-hand-spock"></i> Smashes <i id="scissors" class="far fa-hand-scissors"></i>
-                & Vapourises <i id="rock" class="far fa-hand-rock"></i>
+                <i class="far fa-hand-spock"></i> Smashes <i class="far fa-hand-scissors"></i>
+                & Vapourises <i class="far fa-hand-rock"></i>
                 <br>
             </p>
         </div>
