--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en-US">
   <head>
     <meta charset="UTF-8" />
@@ -42,7 +42,7 @@
   <body>
     <h3>TEST</h3>
   </body>
-</html>
+</html> -->
 
 
 
