--- a/index.html
+++ b/index.html
@@ -92,8 +92,7 @@
       <button class="btn" id="myBtn">Rules of Play</button>
     </div>
 
-
-    <div id="game-screen" style="display: block;">
+    <div id="game-screen" style="">
       <div class="game-area">
 
 
