Media responsiveness Laptop

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       </div>
       <p>Winning Combinations are;
         <br>
-        <i class="far fa-hand-rock"> Crushes </i> <i class="far fa-hand-scissors"></i> &
+        <i class="far fa-hand-rock"></i> Crushes <i class="far fa-hand-scissors"></i> &
         <i class="far fa-hand-lizard"></i>
         <br>
         <i class="far fa-hand-paper"></i> Covers <i class="far fa-hand-rock"></i>
