--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <div class="win" style="">
       <div class="round-results">
-        <span id="round-text">Computer Wins the Round!</span>
+        <span id="result-display">Computer Wins the Round!</span>
       </div>
       <p>Winning Combinations are;
         <br>
